# EasySDL2Setup

./: .gitignore  CMakeLists.txt  README.md
DZSSDL2/: CMakeLists.txt  DZSRenderer.cpp  DZSRenderer.h  DZSSDL2.cpp  DZSSDL2.h  DZSWindow.cpp  DZSWindow.h
sdl_application/: CMakeLists.txt  main.cpp
sdl_application/NatureOfCode/: Histogram.cpp  Histogram.h  IDemo.h  Walker.cpp  Walker.h
sdl_application/SDL2Wrapper/: SDL2.cpp  SDL2.h  SDL2Renderer.cpp  SDL2Renderer.h  SDL2Window.cpp  SDL2Window.h
test/: CMakeLists.txt  main.cpp
unit_tests/: CMakeLists.txt  VectorUtilitiesTests.cpp  renderer_test.cpp  sdl_test.cpp  window_test.cpp
